update google analytics

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,3 +22,4 @@ pages:
 #  - Getting started: getting-started.md
 #  - Customization: customization.md
 #  - License: license.md
+google_analytics: ['UA-60470603-4', 'esp8266.vn']
