--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: ESP8266
 site_url: https://esp8266.vn
-site_description: ESP8266 Document
+site_description: ESP8266 Viet Nam
 site_author: Tuan PM
 theme: readthedocs
 copyright: Copyright &copy; 2016 <a href="https://esp8266.vn">ESP8266 Viet Nam</a>
@@ -15,11 +15,44 @@ repo_url: https://github.com/esp8266vn/esp8266.vn
 
 # Page tree
 pages:
-  - Giới thiệu chung: index.md
-  - Hướng dẫn bắt đầu & cài đặt: 00-introduction.md
-  - ESP8266 Cơ bản: 01-esp-basic.md
-  - Bật tắt LED: 02-esp-led.md
-#  - Getting started: getting-started.md
-#  - Customization: customization.md
-#  - License: license.md
+  - Trang chủ:                    index.md
+  - Kiến thức cơ bản:
+    - Kiến thức cơ bản:           00-introduction/00-introduction.md
+    - Internet Of Things (IoT):   00-introduction/01-about-iot.md
+    - ESP8266 & ESP8285:          00-introduction/02-about-esp8266.md
+    - Module & Board phát triển:  00-introduction/03-esp-module.md
+    - Các kiến thức cơ bản:       00-introduction/04-prepare.md 
+    - Cài đặt công cụ cần thiết:  00-introduction/05-setup-env.md 
+  - ESP8266 cơ bản:               
+    - ESP8266 cơ bản:             01-esp-basic/00-esp-basic.md
+    - Biên dịch dự án mẫu:        01-esp-basic/01-compile-first-time.md
+    - Bật tắt LED:                01-esp-basic/02-blink-led.md 
+    - Nút nhấn:                   01-esp-basic/03-button.md
+    - UART:                       01-esp-basic/03-button.md
+    - Task:                       01-esp-basic/03-button.md
+    - Wifi:                       01-esp-basic/03-button.md
+    - ESPCONN:                    01-esp-basic/03-button.md
+    - MDNS:                       01-esp-basic/03-button.md
+    - NTP:                        01-esp-basic/03-button.md
+    - Lưu dữ liệu vào Flash:      01-esp-basic/03-button.md
+  - Smartconfig:
+    - ESP8266 Smartconfig:        02-esp-smartconfig/00-esp-smartconfig.md
+    - Tại sao cần Smartconfig:    02-esp-smartconfig/01-why-smartconfig.md
+    - ESPTOUCH & AIRKISS:         02-esp-smartconfig/02-esptouch.md
+    - WPS:                        02-esp-smartconfig/03-wps.md
+  - MQTT:
+    - ESP8266 MQTT:               03-esp-mqtt/00-esp-mqtt.md
+  - HTTP Client:
+    - ESP8266 HTTP Client:        04-esp-http-client/00-esp-http-client.md
+  - HTTP Server:
+    - ESP8266 HTTP Server:        05-esp-http-server/00-esp-http-server.md
+  - Firmware Over The Air:
+    - FOTA:                       06-esp-fota/00-esp-fota.md 
+  - ESP Now:
+    - ESP Now:                    07-esp-now/00-esp-now.md
+  - ESP Mesh:
+    - ESP Mesh:                   08-esp-mesh/00-esp-mesh.md
+  
+  - Bản quyền: license.md
+
 google_analytics: ['UA-60470603-4', 'esp8266.vn']
