--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: ESP8266
+site_name: Internet Of Things (IoT) với ESP8266
 site_url: https://esp8266.vn
 site_description: ESP8266 Viet Nam
 site_author: Tuan PM
