--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,7 +25,7 @@ pages:
       - ESP8266 & ESP8285:          00-introduction/02-about-esp8266.md
       - Module & Board phát triển:  00-introduction/03-esp-module.md
       - Các kiến thức cơ bản:       00-introduction/04-prepare.md 
-    - NONOS-SDK:
+    - ESP8266 NONOS-SDK:
       - Cơ bản:               
         - Cài đặt công cụ cần thiết:  nonos-sdk/01-esp-basic/00-esp-basic.md
         - Biên dịch dự án mẫu:        nonos-sdk/01-esp-basic/01-compile-first-time.md
@@ -55,14 +55,18 @@ pages:
         - ESP Now:                    nonos-sdk/07-esp-now/00-esp-now.md
       - ESP Mesh:
         - ESP Mesh:                   nonos-sdk/08-esp-mesh/00-esp-mesh.md
-    - FreeRTOS-SDK:
+    - ESP8266 FreeRTOS-SDK:
       - Cơ bản:                       
         - Giới thiệu:                 freertos-sdk/freertos-sdk.md
         - Cài đặt công cụ cần thiết:  freertos-sdk/00-freertos-basic/00-basic.md
-    - Arduino:
+    - ESP8266 Arduino:
       - Cơ bản:
         - Giới thiệu:                 arduino/arduino.md
         - Cài đặt công cụ cần thiết:  arduino/00-arduino-basic/00-basic.md
+    - ESP8266 Micropython:
+      - Cơ bản:
+        - Giới thiệu:                 micropython/micropython.md
+        - Cài đặt công cụ cần thiết:  micropython/00-ucpython-basic/00-basic.md
 
   - Các dự án:                      projects/projects.md
   - Bản quyền:                      license.md
