--- a/.editorconfig
+++ b/.editorconfig
@@ -18,3 +18,7 @@ trim_trailing_whitespace = false
 [*Makefile*]
 indent_style = tab
 indent_size = 2
+
+[*yml]
+indent_style = space
+indent_size = 2
