--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -65,7 +65,7 @@ pages:
       - Giới thiệu:                   freertos-sdk/freertos-sdk.md
       - Cơ bản:
         - Cài đặt công cụ cần thiết:  freertos-sdk/basic/introduction.md
-        - Task / Thread cơ bản:       freertos-sdk/basic/basic-task.md
+        - Task cơ bản:                freertos-sdk/basic/basic-task.md
         - Software Timer:             freertos-sdk/basic/software-timer.md
         - Đồng bộ / trao đổi dữ liệu: freertos-sdk/basic/queue-semaphore-mutex.md
         - Task notification:          freertos-sdk/basic/task-notification.md
