add slack + esp8266 smart plug project

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,5 @@ script:
 - git remote add gh-token "https://${GH_TOKEN}@github.com/esp8266vn/esp8266.vn.git"
 - git fetch gh-token && git fetch gh-token gh-pages:gh-pages
 - pip install mkdocs -U
+- pip install git+git://github.com/exaroth/mdx_custom_span_class.git
 - mkdocs gh-deploy -v --clean --remote-name gh-token
