--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -107,6 +107,7 @@ pages:
         - Smartconfig & react-native: arduino/projects/smartconfig-react-native.md
         - Smart Plug & Slack Bot:     arduino/projects/smartplug-slack.md
         - Đo nhiệt độ & độ ẩm (Thingspeak): arduino/projects/thingspeak.md
+        - Ứng dụng Blynk:            arduino/projects/blynkapp.md         
     - ESP8266 Micropython:
       - Giới thiệu:                   micropython/micropython.md
       - Cơ bản:
