Complete Project Blynk app tutorial (#54)
* them huong dan thu vien managewifi

* Thêm giới thiệu về accesspoin
Thêm nguyên lí hoạt động của thư viện Managerwifi
Thay đổi Board từ ESP8266mod AI Thinker sang iot-wifi-uno
Thêm mục chuẩn bị + Link tải phần mềm Arduino
Thêm phần cài đặt board Generic ESP8266 Module trong Arduino IDE
Thêm Link tải wireless network watcher

* Sửa lỗi chính tả
xóa ảnh manager8.png.Thay thế bằng ảnh manager8.jpeg
xóa phần kiểm tra kết nối wifi bằng wireless network watcher

* chỏ link iot-wifi-uno https://github.com/iotmakervn/iot-wifi-uno-hw
Sửa lỗi chính tả

* Add Blynk project

* add blynk project image-blynkled

* complete on off led use blynk app
add images about read temperature and humiditi use blynk app

* Complete Plynk app tutorial

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -107,6 +107,8 @@ pages:
         - Smartconfig & react-native: arduino/projects/smartconfig-react-native.md
         - Smart Plug & Slack Bot:     arduino/projects/smartplug-slack.md
         - Đo nhiệt độ & độ ẩm (Thingspeak): arduino/projects/thingspeak.md
+        - Ứng dụng Blynk điều khiển Led:   arduino/projects/blynkled.md 
+        - Ứng dụng Blynk đo nhiệt độ,độ ẩm: arduino/projects/blynkdht22.md              
     - ESP8266 Micropython:
       - Giới thiệu:                   micropython/micropython.md
       - Cơ bản:
